--- a/Book/index.html
+++ b/Book/index.html
@@ -11,7 +11,7 @@ layout: default_book
         <div class="hexo-douban-item">
         <div class="hexo-douban-picture"><img src="{{ book.bookimg }}" data-src="{{ book.bookimg }}" referrerpolicy="no-referrer"></div>
         <div class="hexo-douban-info">
-            <div class="hexo-douban-title"><a target="_blank" href="{{ book.doubanurl }}"> {{ book.title }}</a></div>
+            <div class="hexo-douban-title"><a target="_blank" href="{{ book.doubanurl }}"> {{ book.show_title }}</a></div>
             <div class="hexo-douban-meta">
                 {{ book.author }} | {{ book.translator }}译 | {{ book.press }} | {{ book.publishdate }}
             </div>
