--- a/category.html
+++ b/category.html
@@ -15,8 +15,8 @@ permalink: /category/
 {% capture word %}{{ category[item] | strip_newlines }}{% endcapture %}
 <h2 class="category" id="{{ word }}">{{ word | upcase }}</h2>
 <ul>
-{% for post in site.categories[word] %}{% if post.title != null %}
-<li><span>{{ post.date | date: "%Y-%m-%d" }}</span> » <a href="{{ site.baseurl}}{{ post.url }}">{{ post.title }}</a></li>
+{% for post in site.categories[word] %}{% if post.show_title != null %}
+<li><span>{{ post.date | date: "%Y-%m-%d" }}</span> » <a href="{{ site.baseurl}}{{ post.url }}">{{ post.show_title }}</a></li>
 {% endif %}{% endfor %}
 </ul>
 {% endunless %}{% endfor %}
